# pkgman

./: .gitignore  LICENSE  README.md  README_zh-CN.md  pyproject.toml
.github/workflows/: format-check.yml
example/: multiple.modules.py  single.module.py
pkgman/: __init__.py
